# portfolios

./: README.md
.github/workflows/: accumulate_tech_knowledge_news.yml  convenience_store_food_record.yml  gmail_auto_clean.yml  sale_notification_frontend.yml  test.yml
ai-apps/2025-yearend-app/llm-utility-app/llm-utility-api/: .env.example  .gitignore  README.md  pyproject.toml
ai-apps/2025-yearend-app/llm-utility-app/llm-utility-api/app/: api_errors.py  config.py  llm_client.py  main.py  rate_limit.py  schemas.py
ai-apps/2025-yearend-app/llm-utility-app/llm-utility-api/app/routes/: routes_extract.py  routes_rewrite.py  routes_summarize.py
ai-apps/koog-inv-app/: settings.gradle.kts
ai-apps/langsmith-inv-app/: .env.example  .gitignore  README.md  TODO.md  app.py  exec_cli.py  main.py  requirements.txt
ai-apps/llama_cpp_inv_app/: chat_loop.py  chunk_stream.py  local_llm.py  requirements.txt
ai-apps/multi_ai_cooperation/: .gitignore  README.md  orchestrator.py  requirements.txt
blog/: .gitignore
mini-hackason/1minVoiceJournal/: .gitignore  README.md
mobile-apps/audio_waveform_gift/: .gitignore
mobile-apps/convenience_store_food_record_app/: .gitignore  README.md  package-lock.json  pubspec.yaml
mobile-apps/national_diet_library_search/: .gitignore  README.md  pubspec.yaml
study_books/: .gitignore  README.md
tools/accumulate-tech-knowledge/: .env.example  .gitignore  README.md  main.py  pyproject.toml
tools/accumulate-tech-knowledge/news/: __init__.py  auth.py  config.py  models.py  rss.py  selector.py  service.py  slack.py
tools/daily-code-metrics/: .env.sample  .gitignore  README.md  aggregate_csv.sh  collect_daily_code.sh  docker-compose.yml  visualize_metrics.py
web-apps/habbit_tracker/: .gitignore  README.md  babel.config.js  docker-compose.yml  jest.config.js  package-lock.json  package.json  tables.dio
web-apps/sale_notification/: README.md  lerna.json  (+1 more)
(+506 files in other folders)
