[project]
name = "ai-news-api"
version = "0.1.0"
description = "RSSから技術記事を取得し、OpenAIで選別する最小FastAPI API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "feedparser>=6.0.11",
    "httpx>=0.27.0",
    "openai>=1.55.0",
    "python-dotenv>=1.0.0",
]

[tool.uv]
package = false
